<resources>
    <string name="app_name">RecensementSeyeDiatta</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Entrer votre login</string>
    <string name="prompt_nom">Entrer votre nom</string>
    <string name="prompt_prenom">Entrer votre prénom</string>
    <string name="prompt_password">Entrer votre mot de passe</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="action_sign_up">S\'inscrire</string>
    <string name="action_return_to_connexion">Retour à la page connexion</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>