<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="Inscrivez vous!"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_prenom"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUserNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_nom"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_login"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnInscrire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnRetourToConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_return_to_connexion" />

</LinearLayout>